# CanSat2026GroundStation

./: .gitignore  main.py  pyproject.toml
src/: data.py  loraLogger.py  main.py  plots.py  plotter.py
